--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npx vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "server": "node server/index.js",
-    "start": "npm run build && node server/index.js",
+    "start": "vite preview",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
@@ -46,9 +45,6 @@
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "sql.js": "^1.13.0",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
